# strong-kafka

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_HTTPS.md  config.py  generate_cert.sh  main.py  pyproject.toml
converters/: __init__.py  avro_converter.py
middleware/: cors.py  error_handler.py  logging.py  metrics.py  rate_limit.py  request_id.py
models/: health_data.py
routers/: health.py  health_data.py  metrics.py
schemas/: README.md  health-data.avsc  validate_schema.py
services/: dlq_handler.py  health_check.py  kafka_producer.py  metrics.py  retry_handler.py  schema_registry.py
tests/: README.md  __init__.py  conftest.py  generate_test_data.py  pytest.ini  test_e2e_pipeline.py  test_integration_api.py  test_integration_kafka.py
utils/: logger.py
validators/: health_data_validator.py
